# cloud-vm-mcp-py

./: .env.example  .gitignore  AGENTS.md  README.md  cli.py  providers.yaml.example  pyproject.toml
.github/: copilot-instructions.md
.omc/: project-memory.json
.omc/state/: hud-state.json  hud-stdin-cache.json
openspec/: project.md
openspec/changes/archive/2026-01-29-migrate-to-cloud-vm-management/: design.md
openspec/changes/archive/2026-01-29-update-output-format/: proposal.md  tasks.md
openspec/changes/archive/2026-02-11-add-reboot-vm/: proposal.md  tasks.md
openspec/changes/archive/2026-03-19-support-alibaba-cloud/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-01-add-tool-confirmation/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-cloud-vm-management/: proposal.md  tasks.md
openspec/changes/migrate-to-cloud-vm-management/specs/vm-details/: spec.md
openspec/changes/migrate-to-cloud-vm-management/specs/vm-listing/: spec.md
openspec/changes/update-output-format/specs/vm-details/: spec.md
openspec/specs/alibaba-ecs-provider/: spec.md
openspec/specs/provider-credentials/: spec.md
openspec/specs/tool-confirmation/: spec.md
openspec/specs/vm-details/: spec.md
openspec/specs/vm-listing/: spec.md
openspec/specs/vm-power-management/: spec.md
tests/: conftest.py  test_alibaba_provider.py  test_config.py  test_confirmation.py  test_credentials.py  test_mcp_confirmation.py  test_mcp_tools.py  test_providers.py  test_vm_models.py
vm_mcp/: __init__.py  __main__.py  config.py  confirmation.py  mcp.py
vm_mcp/model/: __init__.py  credentials.py  vm.py
vm_mcp/providers/: __init__.py  alibaba.py  aws.py  azure.py  base.py  registry.py
(+10 files in other folders)
